--- a/package/crds/artifact.gcp.upbound.io_registryrepositories.yaml
+++ b/package/crds/artifact.gcp.upbound.io_registryrepositories.yaml
@@ -265,12 +265,27 @@ spec:
                         description:
                           description: The description of the remote source.
                           type: string
+                        disableUpstreamValidation:
+                          description: |-
+                            If true, the remote repository upstream and upstream credentials will
+                            not be validated.
+                          type: boolean
                         dockerRepository:
                           description: |-
                             Specific settings for a Docker remote repository.
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -284,6 +299,16 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -297,6 +322,16 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -310,6 +345,16 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -754,12 +799,27 @@ spec:
                         description:
                           description: The description of the remote source.
                           type: string
+                        disableUpstreamValidation:
+                          description: |-
+                            If true, the remote repository upstream and upstream credentials will
+                            not be validated.
+                          type: boolean
                         dockerRepository:
                           description: |-
                             Specific settings for a Docker remote repository.
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -773,6 +833,16 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -786,6 +856,16 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -799,6 +879,16 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -1428,12 +1518,27 @@ spec:
                         description:
                           description: The description of the remote source.
                           type: string
+                        disableUpstreamValidation:
+                          description: |-
+                            If true, the remote repository upstream and upstream credentials will
+                            not be validated.
+                          type: boolean
                         dockerRepository:
                           description: |-
                             Specific settings for a Docker remote repository.
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -1447,6 +1552,16 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -1460,6 +1575,16 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
@@ -1473,6 +1598,16 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              customRepository:
+                                description: |-
+                                  Settings for a remote repository with a custom uri.
+                                  Structure is documented below.
+                                properties:
+                                  uri:
+                                    description: Specific uri to the registry, e.g.
+                                      "https://registry-1.docker.io"
+                                    type: string
+                                type: object
                               publicRepository:
                                 description: |-
                                   One of the publicly available Yum repositories supported by Artifact Registry.
