--- a/package/crds/bigquery.gcp.upbound.io_routines.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_routines.yaml
@@ -106,6 +106,11 @@ spec:
                           type: string
                       type: object
                     type: array
+                  dataGovernanceType:
+                    description: |-
+                      If set to DATA_MASKING, the function is validated and made available as a masking function. For more information, see https://cloud.google.com/bigquery/docs/user-defined-functions#custom-mask
+                      Possible values are: DATA_MASKING.
+                    type: string
                   datasetId:
                     description: The ID of the dataset containing this routine
                     type: string
@@ -540,6 +545,11 @@ spec:
                           type: string
                       type: object
                     type: array
+                  dataGovernanceType:
+                    description: |-
+                      If set to DATA_MASKING, the function is validated and made available as a masking function. For more information, see https://cloud.google.com/bigquery/docs/user-defined-functions#custom-mask
+                      Possible values are: DATA_MASKING.
+                    type: string
                   definitionBody:
                     description: |-
                       The body of the routine. For functions, this is the expression in the AS clause.
@@ -1070,6 +1080,11 @@ spec:
                       The time when this routine was created, in milliseconds since the
                       epoch.
                     type: number
+                  dataGovernanceType:
+                    description: |-
+                      If set to DATA_MASKING, the function is validated and made available as a masking function. For more information, see https://cloud.google.com/bigquery/docs/user-defined-functions#custom-mask
+                      Possible values are: DATA_MASKING.
+                    type: string
                   datasetId:
                     description: The ID of the dataset containing this routine
                     type: string
